TA-Prod/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of technician contacts.</description>
        <inlineHelpText>Active - Technician currently services our products. 
Inactive - Technician no longer services our products.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>eContacts__Business_Card__c</fullName>
        <label>Image Data Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>eContacts__Created_By_eContacts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By eContacts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>eContacts__Location_Text__c</fullName>
        <label>Location Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eContacts__Location__c</fullName>
        <label>Location</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>eContacts__Secondary_Image__c</fullName>
        <label>Image Data2 Only</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <description>Use to create standard contacts.</description>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>Technician</fullName>
        <active>true</active>
        <description>Use to create technician contacts.</description>
        <label>Technician</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>